--- a/vercel.json
+++ b/vercel.json
@@ -25,12 +25,13 @@
         "APP_ENV": "production",
         "APP_DEBUG": "false",
         "APP_URL": "https://your-project-url.vercel.app",
-        "APP_KEY": "@app_key",
-        "DB_CONNECTION": "mysql",
-        "DB_HOST": "@db_host",
-        "DB_PORT": "@db_port",
-        "DB_DATABASE": "@db_database",
-        "DB_USERNAME": "@db_username",
-        "DB_PASSWORD": "@db_password"
+        "APP_KEY": "base64:/7pCZrabXzST4sW1oy+esGlpnDrDDKY8TQU4ehaXOtE=",
+        "DB_CONNECTION": "pgsql",
+        "DB_HOST": "ep-aged-block-a1u41p3k-pooler.ap-southeast-1.aws.neon.tech",
+        "DB_PORT": "5432",
+        "DB_DATABASE": "neondb",
+        "DB_USERNAME": "neondb_owner",
+        "DB_PASSWORD": "posnpg_QDHlyIGU8dX2",
+        "GEMINI_API_KEY": "AIzaSyCaYy3V0rYDDXSeP2MirS-W8NT2qEs9UmA"
     }
 }
