--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-    "version": 2,
+"version": 2,
     "framework": null,
     "builds": [
         {
             "src": "/public/index.php",
-            "use": "vercel-php@0.6.0"
+            "use": "@vercel/php"
         },
         {
             "src": "/public/**",
