--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,22 @@
     "version": 2,
     "builds": [
         {
-            "src": "/public",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "/api/index.php",
+            "src": "public/index.php",
             "use": "@vercel/php"
         }
     ],
     "routes": [
         {
-            "src": "/(css|js|images|fonts|storage)/(.*)",
-            "dest": "/public/$1/$2"
+            "src": "/build/(.*)",
+            "dest": "public/build/$1"
+        },
+        {
+            "src": "/storage/(.*)",
+            "dest": "public/storage/$1"
         },
         {
             "src": "/(.*)",
-            "dest": "/api/index.php"
+            "dest": "public/index.php"
         }
     ]
 }
