--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "public/index.php",
-            "use": "@vercel/php"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/build/(.*)",
-            "dest": "public/build/$1"
-        },
-        {
-            "src": "/storage/(.*)",
-            "dest": "public/storage/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "public/index.php"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "api/**/*.php",
+      "use": "vercel-php@0.6.0"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "public/$1"
+    }
+  ]
 }
