--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,32 @@
     {
       "src": "public/**",
       "use": "@vercel/static"
-    },
-    {
-      "src": "api/**/*.php",
-      "use": "vercel-php@0.6.0"
     }
   ],
+  "functions": {
+    "api/*.php": {
+      "runtime": "vercel-php@0.6.0"
+    },
+    "public/*.php": {
+      "runtime": "vercel-php@0.6.0"
+    }
+  },
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/build/(.*)",
+      "dest": "public/build/$1"
+    },
+    {
+      "src": "/storage/(.*)",
+      "dest": "public/storage/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "public/$1"
+      "dest": "public/index.php"
     }
   ]
 }
