--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,38 @@
 {
-  "version": 2,
-  "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  },
-  "routes": [
-    {
-      "src": "/(css|js|images)/(.*)",
-      "dest": "public/$1/$2"
-    },
-    {
-      "src": "/build/(.*)",
-      "dest": "public/build/$1"
-    },
-    {
-      "src": "/storage/(.*)",
-      "dest": "public/storage/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.php"
-    }
-  ],
+    "version": 2,
+    "framework": null,
+    "builds": [
+        {
+            "src": "/public/index.php",
+            "use": "vercel-php@0.6.0"
+        },
+        {
+            "src": "/public/**",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(css|js|images|fonts|storage)/(.*)",
+            "dest": "/public/$1/$2"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/public/index.php"
+        }
+    ],
   "env": {
     "APP_ENV": "production",
+    "APP_KEY": "base64:IH1cp0EejNjaOfMOtMOt0CN8jgjvV4wlnRkO8aU7Gok=",
+    "APP_URL": "https://your-project-url.vercel.app",
     "APP_DEBUG": "false",
     "DB_CONNECTION": "pgsql",
     "DB_HOST": "ep-aged-block-a1u41p3k-pooler.ap-southeast-1.aws.neon.tech",
+    "DB_PORT": "5432",
     "DB_DATABASE": "neondb",
     "DB_USERNAME": "neondb_owner",
-    "DB_PASSWORD": "posnpg_QDHlyIGU8dX2"
-  }
+    "DB_PASSWORD": "posnpg_QDHlyIGU8dX2",
+    "GEMINI_API_KEY": "AIzaSyCaYy3V0rYDDXSeP2MirS-W8NT2qEs9UmA"
+  },
+    "outputDirectory": "public"
 }
